--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   json_annotation: ^4.8.0
   json_serializable: ^6.6.1
+  openai_client: ^0.0.5
 
 dev_dependencies:
   build_runner: ^2.3.3
